--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,8 @@
     --navColor: #343131;
     --navFontColor: #fff;
     --navFontColorAction: #A04747; 
+    --mainColor: #1e90ff;
+    --mainColorHover: #007bff;
 }
 * {
     margin: 0;
@@ -199,7 +201,7 @@ Nav.main_nav {
 }
 
 .data-table tbody tr:nth-child(even) {
-    background-color: #f9f9f9;
+    background-color: #f9f9f99b;
 }
 
 .data-table td {
@@ -208,29 +210,54 @@ Nav.main_nav {
 
 /* Table Row Hover Effect */
 .data-table tbody tr:hover {
-    background-color: #f1f1f1; /* Slightly darker background on row hover */
+    background-color: var(--mainColor); /* Slightly darker background on row hover */
+    color: #f9f9f9;
     transition: background-color 0.3s ease;
+    transition: color 0.3s ease;
 }
 
 
+.aside_action-buttons {
+    margin-left: 15px;
+    border-radius: 5px;
+    right: 20px;
+    gap: 8px;
+    transition: opacity 0.3s ease;
+    flex-direction: column;
+}
 
+/* 보조 메뉴 일자 버튼 */
+.aside_action-buttons button{
+    font-size: 15px;
+    font-weight: bold;
+    padding: 3px 8px;
+    background-color: var(--mainColor);
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+}
+.aside_action-buttons button:hover{
+    background-color: var(--mainColorHover);
+}
 
 
 .action-buttons {
     padding: 10px;
     border-radius: 5px;
     position: absolute;
-    right: 10px;
-    display: flex;
+    right: 20px;
+    display: none;
     gap: 8px;
-    opacity: 0;
     transition: opacity 0.3s ease;
-    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3); /* Stronger shadow effect */
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 1); /* Stronger shadow effect */
+    flex-direction: column;
 }
 
 /* Show buttons on cell hover */
 td:hover .action-buttons {
-    opacity: 1;
+    
+    display: flex;
 }
 
 /* Action Buttons Styling */
@@ -254,17 +281,13 @@ td:hover .action-buttons {
     color: white;
 }
 
-/* Button Hover Effect */
+/* 기타, 수정*/
 .edit-button:hover {
     background-color: #45a049;
 }
 
+/* 기타 삭제 */
 .delete-button:hover {
     background-color: #d32f2f;
 }
 
-/* Table Row Hover Effect */
-.data-table tbody tr:hover {
-    background-color: #f1f1f1;
-    transition: background-color 0.3s ease;
-}
