--- a/public/style.css
+++ b/public/style.css
@@ -162,9 +162,6 @@ Nav.main_nav {
 
 /* Radio Group */
 .radio-group {
-    width:100%;
-    display: flex;
-    justify-content: space-between;
     align-items: center;
 }
 
@@ -305,6 +302,145 @@ td:hover .action-buttons {
 .delete-button:hover {
     background-color: #d32f2f;
 }
+
+
+/* modal 창 */
+/* Overlay Background */
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.5); /* Semi-transparent gray */
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+}
+
+/* Modal Box */
+.modal {
+    width: 400px;
+    background: #fff;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);
+    text-align: center;
+}
+
+/* Modal Header */
+.modal-header {
+    display: flex;
+    justify-content: center; /* Center the title */
+    position: relative; /* Positioning context for the close button */
+    margin-bottom: 15px;
+}
+
+/* Close Button */
+.close-button {
+    position: absolute;
+    top: -15px; /* 10px from the top */
+    right: -3px; /* 10px from the right */
+    background: none;
+    border: none;
+    font-size: 40px;
+    font-weight: bold;
+    color: #333;
+    cursor: pointer;
+    line-height: 1;
+    padding: 0;
+}
+
+.close-button:hover {
+    color: #ff0000; /* Red color on hover */
+}
+
+/* Modal Header */
+.modal h2 {
+    margin-bottom: 15px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+/* Form Styling */
+.modal-form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.form-group {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.form-group label {
+    width: 40%;
+    font-weight: bold;
+}
+
+.form-group input,
+.form-group select {
+    width: 55%;
+    padding: 5px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
+/* Table Styling */
+.modal-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 15px;
+}
+
+.modal-table th, .modal-table td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    font-size: 14px;
+    text-align: center;
+}
+
+.modal-table th {
+    background-color: #f5f5f5;
+}
+
+/* Buttons */
+.modal-buttons {
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.add-button {
+    background-color: #1e90ff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.delete-button {
+    background-color: #ff007f;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.add-button:hover {
+    background-color: #007bff;
+}
+
+.delete-button:hover {
+    background-color: #d32f2f;
+}
+
 
 
 @media (max-width: 764px) {
