--- a/public/style.css
+++ b/public/style.css
@@ -80,11 +80,22 @@ Nav.main_nav {
 /* Form Row */
 .form-row {
     display: flex;
+    flex-direction: row;
     align-items: center;
     margin-bottom: 10px;
 }
 
+.form-column {
+    flex-direction: column;
+    align-items: start;
+    justify-items: center;
+}
 
+.form-column .accountSub {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 15px;
+}
 
 
 .form-row label {
