--- a/public/style.css
+++ b/public/style.css
@@ -98,6 +98,30 @@ Nav.main_nav {
     border: 3px solid gray;
 }
 
+.statsArea .statsRow {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.statsArea .statsRow .statsDiv {
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.statsArea .statsRow .statsDiv .displayStatus {
+    margin-left: 10px;
+    width: 150px;
+    height: 50px;
+    background-color: #9c9c9c;
+    border-radius: 15px;
+    color: white;
+    font-size:20px;
+    padding: 15px;
+}
+
 /* Form Row */
 .form-row {
     display: flex;
