--- a/public/style.css
+++ b/public/style.css
@@ -74,6 +74,10 @@ header, main, aside {
     justify-items: flex-end;
 }
 
+.header .mainUser .userInfo .userBtnImg {
+    display: none;
+}
+
 .header .mainUser .userInfo .userId {
     display: flex;
     align-items: flex-end;
@@ -626,6 +630,7 @@ td:hover .action-buttons {
 @media (max-width: 764px) {
     /* Header 부분 */
     .header {
+        position: relative;
         height: 50px;
     }
 
@@ -642,12 +647,70 @@ td:hover .action-buttons {
     }
 
 
-    .header .mainHeader {
+    .header .mainHeader,
+    .header .mainUser .userInfo{
         display: none;
     }
 
-    .header .mainUser {
-        display:none;
+    .header .mainUser .userBtnImg {
+        position: absolute;
+        right: 20px;
+        display: block;
+        width: 30px;
+        height: 30px;
+        background-image: url('./asset/icon/bx-user.svg');
+        background-size: 100% 100%;
+
+        cursor: pointer;
+    }
+
+    /* userIcon 클릭 시, 나오는 popup */
+    .header .mainUser .userMiniInfo {
+        position: absolute;
+        top: 40px;
+        right: 30px;
+
+        display: none;
+        padding: 10px;
+        z-index: 2;
+        width: 300px;
+        height: 115px;
+        border-radius: 15px;
+        background-color: white;
+        box-shadow: 
+        4px 8px 16px rgba(0, 0, 0, 0.2),  /* First shadow layer */
+        8px 16px 32px rgba(0, 0, 0, 0.15), /* Second shadow layer */
+        12px 24px 48px rgba(0, 0, 0, 0.1); /* Third shadow layer */
+    }
+
+    /* userIcon 클릭 시, 나오는 pop창 내부 */
+    .header .mainUser .userMiniInfo .infoArea {
+        width: 100%;
+        height: 30px;
+        background-color: var(--grayColor);
+
+        border-radius: 15px;
+        padding: 8px 15px;
+        font-size: 15px;
+        font-weight: bold;
+        color: rgb(41, 41, 46);
+    }
+
+    .header .mainUser .userMiniInfo .btnUser {
+        margin-top: 20px;
+        width: 100%;
+        height: 30px;
+
+        display: flex;
+        justify-content: center;
+        background-color: var(--mainColor);
+
+        border-radius: 15px;
+        padding: 8px 15px;
+        font-size: 15px;
+        font-weight: bold;
+        color: white;
+        cursor: pointer;
     }
 
 
