--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 :root {
-    --navColor: #343131;
+    --navColor: #9e9e9e;
     --grayColor: #9e9e9e;
     --navFontColor: #fff;
     --navFontColorAction: #1e90ff; 
@@ -112,7 +112,7 @@ header, main, aside {
 
 Nav.main_nav {
     padding: 10px;
-    height: 30px;
+    height: 50px;
     width: 100%;
     background-color: var(--navColor);
     border-radius: 10px;
@@ -120,6 +120,7 @@ Nav.main_nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    justify-items: center;
 }
 
 .main_nav .navMainArea {
